# muesli

./: .gitignore  COMPATIBILITY.md  README.md  pyproject.toml  setup.py
assets/: icon.icns
scripts/: build_app.sh  create_dmg.sh  setup.sh
src/meeting_recorder/: __init__.py  app.py  audio_tap.swift  calendar_client.py  config.py  diarizer.py  error_manager.py  notion_client.py  recorder.py  summarizer.py  transcriber.py  transcript_writer.py
tests/: test_calendar_client.py  test_diarizer.py  test_error_manager.py  test_recorder.py  test_transcriber.py  test_transcript_writer.py
