[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "muesli"
version = "0.1.0"
description = "Free, fully local meeting transcription for macOS — records, transcribes, and summarizes on-device"
requires-python = ">=3.11,<3.13"
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "faster-whisper>=1.0.0,<2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1",
    "torch>=2.0",
]

[project.scripts]
muesli = "meeting_recorder.app:main"

[tool.setuptools.packages.find]
where = ["src"]
